# vue-vben-admin

./: README.md  README.zh-CN.md  TODO.md  compose.yaml  project_understand.md  read_audio_guard_improved.sh  setup.sh  任务文档.md  技术选型.md
.devcontainer/: devcontainer.json
ai-api-service/: README.md  TODO.md
ai-api-service/src/: server.js
apps/backend-fastapi/: .env.example  README.md  alembic.ini  pyproject.toml
apps/backend-fastapi/alembic/: env.py
apps/backend-fastapi/alembic/versions/: 20260414_0001_init_core_schema.py
apps/backend-fastapi/app/: main.py
apps/backend-fastapi/app/api/: router.py
apps/backend-fastapi/app/api/v1/endpoints/: auth.py  chats.py  risk_recognition.py
apps/backend-fastapi/app/core/: config.py  deps.py
apps/backend-fastapi/app/db/: __init__.py  metadata.py  session.py
apps/backend-fastapi/app/models/: __init__.py  binding.py  chat.py  content.py  mixins.py  notification.py  risk.py  system_config.py  user.py  workorder.py
apps/backend-fastapi/app/schemas/: auth.py  business.py  chat.py
apps/backend-fastapi/app/services/: auth.py  business.py  chat.py  db_init.py  risk_recognition.py
apps/backend-fastapi/docs/: api-outline.md  database-design.md
apps/backend-fastapi/guard_silver_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/backend-fastapi/tests/: test_api.py
apps/web-antd/: .env  .env.development  .env.production  index.html  vite.config.ts
silver-shield-mobile/: .env.demo  .env.example  .env.production  .gitignore  README.md  TODO.md  package.json  tsconfig.json  需求分析文档.md
(+96 files in other folders)
