[project]
name = "guard-silver-backend"
version = "0.1.0"
description = "FastAPI backend foundation for the Guard Silver anti-fraud platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15,<2.0",
  "fastapi>=0.115,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "pyjwt[crypto]>=2.10,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "python-json-logger>=2.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1.0", "pytest>=8.3,<9.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["app*"]
